ajustes no html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Menu Esquina Deres</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -74,9 +74,9 @@
         </li>
       </ul>
     </nav>
-    <a class="main-content__logo" id="section__title">
+    <div class="main-content__logo">
       <img src="assets/img/logo.png" class="main-content__img" />
-    </a>
+    </div>
     <main class="main-content">
       <div class="section">
         <h2 class="section__title" id="section__title">Sessões</h2>
