adicionando sessoes lanches e combos

--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
 
         <li
           class="menu__section-title section-target"
+          data-function-name="lanches"
+        >
+          Lanches
+        </li>
+
+        <li
+          class="menu__section-title section-target"
           data-function-name="bebidasNaoAlcoolicas"
         >
           Bebidas Não-Alcoolicas
@@ -64,6 +71,13 @@
           data-function-name="drinks"
         >
           Drinks
+        </li>
+
+        <li
+          class="menu__section-title section-target"
+          data-function-name="combos"
+        >
+          Combos & Garrafas
         </li>
 
         <li
