--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </ul>
     </nav>
     <div class="main-content__logo">
-      <img src="assets/img/logo.png" class="main-content__img" />
+      <img src="assets/img/log-deres-vetor.png" class="main-content__img" />
     </div>
     <main class="main-content">
       <div class="section">
